contest assignment submitted - 3