@@ -1,78 +1,78 @@
 package com.driver;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Date;
 
 public class Gmail extends Email {
-    static class Mail {
-        Date date;
-        String senderId;
-        String message;
-
-        public Mail(Date date, String senderId, String message) {
-            this.date = date;
-            this.senderId = senderId;
-            this.message = message;
-        }
-    }
 
     int inboxCapacity; //maximum number of mails inbox can store
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
-    Deque<Mail> inbox;
-    Deque<Mail> trash;
+    private static class Mail {
+        Date date;
+        String sender;
+        String message;
+
+        Mail(Date date, String sender, String message) {
+            this.date = date;
+            this.sender = sender;
+            this.message = message;
+        }
+    }
+    ArrayList<Mail> inbox;
+    ArrayList<Mail> trash;
+
     public Gmail(String emailId, int inboxCapacity) {
         super(emailId);
-        this.inboxCapacity = inboxCapacity;
-        inbox = new ArrayDeque<>();
-        trash = new ArrayDeque<>();
-
+        this.inboxCapacity=inboxCapacity;
+        this.inbox = new ArrayList<>();
+        this.trash = new ArrayList<>();
     }
+
 
     public void receiveMail(Date date, String sender, String message){
         // If the inbox is full, move the oldest mail in the inbox to trash and add the new mail to inbox.
         // It is guaranteed that:
         // 1. Each mail in the inbox is distinct.
         // 2. The mails are received in non-decreasing order. This means that the date of a new mail is greater than equal to the dates of mails received already.
-        if(inbox.size()==this.inboxCapacity){
-            trash.addLast(inbox.removeFirst());
+        if (inbox.size() == inboxCapacity) {
+            trash.add(inbox.remove(0));
         }
-        inbox.addLast(new Mail(date,sender,message));
+        inbox.add(new Mail(date, sender, message));
     }
 
     public void deleteMail(String message){
         // Each message is distinct
         // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
-        for(Mail m: inbox){
-            if(message.equals(m.message)){
-                trash.addLast(m);
-                inbox.remove(m);
-                break;
+        for (int i = 0; i < inbox.size(); i++) {
+            if (inbox.get(i).message.equals(message)) {
+                trash.add(inbox.remove(i));
+                return;
             }
         }
-
     }
 
     public String findLatestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the latest mail present in the inbox
-        if(inbox.size()==0) return null;
-        return inbox.getLast().message;
+        return inbox.isEmpty() ? null : inbox.get(inbox.size() - 1).message;
+
     }
 
     public String findOldestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the oldest mail present in the inbox
-        if(inbox.size()==0) return null;
-        return inbox.getFirst().message;
+        return inbox.isEmpty() ? null : inbox.get(0).message;
 
     }
 
     public int findMailsBetweenDates(Date start, Date end){
         //find number of mails in the inbox which are received between given dates
         //It is guaranteed that start date <= end date
-        int count=0;
-        for(Mail m: inbox){
-            if(start.compareTo(m.date)<=0 && end.compareTo(m.date)>=0){
+        int count = 0;
+        for (Mail mail : inbox)
+        {
+            if (mail.date.compareTo(start) >= 0 && mail.date.compareTo(end) <= 0) {
                 count++;
             }
         }
@@ -93,10 +93,11 @@ public class Gmail extends Email {
     public void emptyTrash(){
         // clear all mails in the trash
         trash.clear();
+
     }
 
     public int getInboxCapacity() {
         // Return the maximum number of mails that can be stored in the inbox
-        return this.inboxCapacity;
+        return inboxCapacity;
     }
 }
